# portfolio

./: .editorconfig  .env.local.example  .eslintcache  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .gitignore  .lintstagedrc  .lintstagedrc.js  .lintstagedrc.json  .prettierignore  .prettierrc  .prettierrc.js  .prettierrc.json  .releaserc  .releaserc.js  .releaserc.json  CHANGELOG.md  Cargo.toml  Dioxus.toml  LICENSE  Makefile  README.md  env.d.ts  eslint.config.js  eslint.config.ts  input.css  justfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  types.d.ts
.github/workflows/: codeql-analysis.yml  release.yml  update-deps.yml
app/: layout.tsx  not-found.tsx  page.tsx
assets/: main.css
components/: code.tsx  contact.tsx  experience-card.tsx  experience.tsx  footer.tsx  head.jsx  head.tsx  hero.tsx  image.tsx  index.ts  input.tsx  link.tsx  nav-link.tsx  navbar.tsx  project-card.tsx  projects.tsx  repo-card.tsx  socials.tsx  theme-changer.tsx  typewriter.tsx
data/: contact.ts  experience.ts  hero.ts  index.ts  links.ts  meta.ts  projects.ts
layout/: default-layout.tsx  index.ts
pages/: _app.tsx  _document.tsx  index.tsx
pages/api/: index.ts  repos.ts  sendgrid.ts
public/: index.html  main.css  manifest.json  reset.css  sitemap.xml  tailwind.css
src/: App.js  index.js  lib.rs  main.rs  route.rs  views.rs
src/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx  robots.ts  (+2 more)
styles/: _main.scss  main.scss
utils/: debounce.ts  index.ts  sleep.ts  throttle.ts  useScrollPosition.ts
(+113 files in other folders)
