[package]
name = "portfolio"
version = "0.1.0"
authors = ["Andrew X. Shah <drewshah0@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
log = "0.4.21"
dioxus = { version = "0.5.1", features = ["fullstack", "router"] }
dioxus-logger = "0.5.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
