[package]
name = "portfolio"
version = "0.1.0"
authors = ["Andrew X. Shah <drewshah0@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
log = { version = "0.4.21" }
tracing = { version = "0.1.40" }
dioxus = { version = "0.5.1", features = ["fullstack", "router"] }
dioxus-logger = { version = "0.5.1" }
manganis = { version = "0.2.2" }

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
